--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 </script>
 
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8ZLQXV81E8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8ZLQXV81E8');
+</script>
+
+
       <!--=============== FAVICON ===============-->
       <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon">
 
